# liger

./: .cppcheck-suppressions.txt  .gitignore  .gitlab-ci.yml  .travis.yml  .travis.yml.swp  .travis.yml_old  CMakeLists.txt  README.md  liger-console.pro  liger.pri  liger.pro  matlabcheck.pri  tigon-console.pro
src/libs/botan/: CMakeLists.txt  botan.cpp  botan.h  botan.pro  botan_dependencies.pri  botan_global.h
src/libs/tigon/: CMakeLists.txt  README.md  Tigon.h  TigonDoxyFile  coverage.pri  python.pri  tigon.pro  tigon_dependencies.pri  tigon_global.h  tigon_pch.h  tigon_resource.qrc  tigonconstants - Copy.h  tigonconstants.h  tigonengineregistry.h  tigonresource.pri
src/libs/tigon/Algorithms/: ACROMUSE.cpp  ACROMUSE.h  IAlgorithm.cpp  IAlgorithm.h  IPMQPAlgorithm.cpp  IPMQPAlgorithm.h  MOEAD.cpp  MOEAD.h  MOGA.cpp  MOGA.h  NSGAII.cpp  NSGAII.h  NSGAIII.cpp  NSGAIII.h  NSGAIIPSA.cpp  NSGAIIPSA.h  ParEGO.cpp  ParEGO.h  SMSEMOA.cpp  SMSEMOA.h  sParEGO.cpp  sParEGO.h
src/libs/tigon/Core/: IPlugin.h  PluginManager.cpp  PluginManager.h  TMap.h  TObject.cpp  TObject.h  TSharedPointer.h  TString.h  TTuple.h  TVector.h
src/libs/tigon/Engine/: IFunctionFactory.h  IPSetFactory.h  OptimizationLinearFlow.cpp  OptimizationLinearFlow.h  TigonEngine.cpp  TigonEngine.h  TigonEngineConstants.h  TigonFunctionFactory.cpp  TigonFunctionFactory.h  TigonOperatorFactory.cpp  TigonOperatorFactory.h
src/libs/tigon/ExceptionHandling/: TException.cpp  TException.h
src/libs/tigon/Factories/: DistributionFactory.cpp  DistributionFactory.h  DominanceRelationFactory.cpp  DominanceRelationFactory.h  RobustnessIndicatorFactory.cpp  RobustnessIndicatorFactory.h
src/libs/tigon/Log/: EvaluationEntry.cpp  EvaluationEntry.h  LogEntry.cpp  LogEntry.h  LogManager.cpp  LogManager.h  PopulationEntry.cpp  PopulationEntry.h
src/libs/tigon/Operators/: EmptyOperator.cpp  EmptyOperator.h  IOperator.cpp  IOperator.h
src/libs/tigon/Operators/AlgorithmSpecific/: MOEADNeighbourhoodUpdate.cpp  MOEADNeighbourhoodUpdate.h
src/libs/tigon/Operators/Archives/: IArchive.cpp  IArchive.h
src/libs/tigon/Operators/Composites/: ConstrainedSurrogateBasedOptimizer.cpp  ConstrainedSurrogateBasedOptimizer.h  IComposite.cpp  IComposite.h  SurrogateBasedOptimizer.cpp  SurrogateBasedOptimizer.h  SurrogateBasedOptimizerWithPerturbation.cpp  SurrogateBasedOptimizerWithPerturbation.h
src/libs/tigon/Operators/Convergence/: Hypervolume.cpp  Hypervolume.h  IConvergence.cpp  IConvergence.h  RandomHypervolume.cpp  RandomHypervolume.h  RobustScalarisingSpace.cpp  RobustScalarisingSpace.h  ScalarisingSpace.cpp  ScalarisingSpace.h
src/libs/tigon/Operators/Directions/: DiscreteCrossover.cpp  DiscreteCrossover.h  ExampleCrossOver.cpp  ExampleCrossOver.h  IDirection.cpp  IDirection.h  IPMQPDirection.cpp  IPMQPDirection.h  OrderedCrossOver.cpp  OrderedCrossOver.h  SBXCrossOver.cpp  SBXCrossOver.h  SimplexLatticeDirectionIterator.cpp  SimplexLatticeDirectionIterator.h  SinglePointCrossOver.cpp  SinglePointCrossOver.h
src/libs/tigon/Operators/Evaluators/: BatchEvaluator.cpp  BatchEvaluator.h  Evaluator.cpp  Evaluator.h  ExampleEvaluator.cpp  ExampleEvaluator.h  IEvaluator.cpp  IEvaluator.h  IPMQPEvaluator.cpp  IPMQPEvaluator.h  RandomNumberEstimator.cpp  RandomNumberEstimator.h  Validation.cpp  Validation.h  ValidationWithScalarisation.cpp  ValidationWithScalarisation.h
src/libs/tigon/Operators/Filtrations/: ExampleFiltration.cpp  ExampleFiltration.h  ExampleRandSelection.cpp  ExampleRandSelection.h  FiltrationForDirection.cpp  FiltrationForDirection.h  FitnessEliteSelection.cpp  FitnessEliteSelection.h  FreezeOperatorOutput.cpp  FreezeOperatorOutput.h  IFiltration.cpp  IFiltration.h  MergeForNextIteration.cpp  MergeForNextIteration.h  MultiMemberTournamentForDirection.cpp  MultiMemberTournamentForDirection.h  MultiMemberTournamentForPerturbation.cpp  MultiMemberTournamentForPerturbation.h  NSGAIIEliteSelection.cpp  NSGAIIEliteSelection.h  NeighbourhoodFiltration.cpp  NeighbourhoodFiltration.h  PSAClustering.cpp  PSAClustering.h  PSAEliteSelection.cpp  PSAEliteSelection.h  RandFiltrationForDirection.cpp  RandFiltrationForDirection.h  RandFiltrationForModification.cpp  RandFiltrationForModification.h  RandFiltrationForPerturbation.cpp  RandFiltrationForPerturbation.h  RandSetReplacement.cpp  RandSetReplacement.h  RouletteWheelSelection.cpp  RouletteWheelSelection.h  SMSEMOAReduce.cpp  SMSEMOAReduce.h  StochasticUniversalSampling.cpp  StochasticUniversalSampling.h  (+6 more)
src/libs/tigon/Operators/Fitness/: AverageFitness.cpp  AverageFitness.h  ConstraintPenalty.cpp  ConstraintPenalty.h  ExampleFitness.cpp  ExampleFitness.h  GeneralizedDecomposition.cpp  GeneralizedDecomposition.h  IFitness.cpp  IFitness.h  MOGANonDominanceRanking.cpp  MOGANonDominanceRanking.h  NSGAIICrowding.cpp  NSGAIICrowding.h  NSGAIIINiching.cpp  NSGAIIINiching.h  NonDominanceRanking.cpp  NonDominanceRanking.h  NonDominanceRankingParametric.cpp  NonDominanceRankingParametric.h  PSACrowding.cpp  PSACrowding.h  RobustnessAssignment.cpp  RobustnessAssignment.h  Scalarization.cpp  Scalarization.h  SharedFitness.cpp  (+5 more)
src/libs/tigon/Random/: RandomGenerator.cpp  RandomGenerator.h
src/libs/tigon/Utils/: AbstractInterpolator.cpp  AbstractInterpolator.h  BatchSolveRegister.cpp  BatchSolveRegister.h  BoxConstraintViolationCorrections.cpp  BoxConstraintViolationCorrections.h  CorrelationMatrix.cpp  CorrelationMatrix.h  DominanceUtils.cpp  DominanceUtils.h  HypercubeGrid.cpp  HypercubeGrid.h  HypervolumeUtils.cpp  HypervolumeUtils.h  IElementUtils.cpp  IElementUtils.h  JsonUtils.cpp  JsonUtils.h  KernelDensityEstimation.cpp  KernelDensityEstimation.h  Kriging.cpp  Kriging.h  KrigingCascade.cpp  KrigingCascade.h  KrigingVariogram.cpp  KrigingVariogram.h  LinearInterpolator.cpp  LinearInterpolator.h  MultiPolynomialRegression.cpp  MultiPolynomialRegression.h  NormalisationUtils.cpp  NormalisationUtils.h  ObjectiveReduction.cpp  ObjectiveReduction.h  PolynomialRegression.cpp  PolynomialRegression.h  PowerVariogram.cpp  PowerVariogram.h  ProjectionUtils.cpp  ProjectionUtils.h  (+30 more)
(+1279 files in other folders)
