include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)
if (UNIX)
    add_definitions(
        -DBOTAN_TARGET_OS_HAS_GETTIMEOFDAY -DBOTAN_HAS_ALLOC_MMAP
        -DBOTAN_HAS_ENTROPY_SRC_DEV_RANDOM -DBOTAN_HAS_ENTROPY_SRC_EGD -DBOTAN_HAS_ENTROPY_SRC_FTW
        -DBOTAN_HAS_ENTROPY_SRC_UNIX -DBOTAN_HAS_MUTEX_PTHREAD -DBOTAN_HAS_PIPE_UNIXFD_IO )
endif()

if(APPLE)
    add_definitions(-DBOTAN_TARGET_OS_IS_DARWIN)
endif()

if (CMAKE_CXX_COMPILER_ID MATCHES "AppleClang")
    add_definitions(-DBOTAN_BUILD_COMPILER_IS_CLANG)
endif()

if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    add_definitions(-DBOTAN_BUILD_COMPILER_IS_GCC)
endif()

if (CMAKE_CXX_COMPILER_ID MATCHES "Intel")
    add_definitions(-DBOTAN_BUILD_COMPILER_IS_GCC)
endif()

add_definitions(-DBOTAN_TARGET_ARCH_IS_X86_64)

if(WIN32)
    add_definitions (-DBOTAN_TARGET_OS_IS_WINDOWS
        -DBOTAN_TARGET_OS_HAS_LOADLIBRARY -DBOTAN_TARGET_OS_HAS_WIN32_GET_SYSTEMTIME
        -DBOTAN_TARGET_OS_HAS_WIN32_VIRTUAL_LOCK -DBOTAN_HAS_DYNAMICALLY_LOADED_ENGINE
        -DBOTAN_HAS_DYNAMIC_LOADER -DBOTAN_HAS_ENTROPY_SRC_CAPI -DBOTAN_HAS_ENTROPY_SRC_WIN32
        -DBOTAN_HAS_MUTEX_WIN32 -DOS_WIN)
    if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
        add_definitions(-DBOTAN_BUILD_COMPILER_IS_MSVC -DBOTAN_TARGET_OS_HAS_GMTIME_S
            -D_SCL_SECURE_NO_WARNINGS)
    endif()
else()
    add_definitions(-DOS_UNIX)
endif()

add_library(Botan SHARED botan.cpp)
