include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

set (SOURCES
    Core/TObject.cpp
    Algorithms/IAlgorithm.cpp
    Operators/Archives/IArchive.cpp
    Operators/Constraints/BaseBoxConstraint.cpp
    Operators/Constraints/IBoxConstraints.cpp
    Operators/Constraints/ILinearEqConstraints.cpp
    Operators/Constraints/ILinearIneqConstraints.cpp
    Operators/Constraints/INonLinearEqConstraints.cpp
    Operators/Constraints/INonLinearIneqConstraints.cpp
    Operators/Directions/IDirection.cpp
    Operators/Evaluators/IEvaluator.cpp
    Operators/Filtrations/IFiltration.cpp
    Operators/Fitness/IFitness.cpp
    Operators/Initialisation/IInitialisation.cpp
    Operators/Initialisation/LHSInit.cpp
    Operators/Initialisation/RandomInit.cpp
    Operators/Perturbations/IPerturbation.cpp
    Operators/Random/RGenerator.cpp
    Operators/IOperator.cpp
    Representation/Constraints/BoxConstraintsData.cpp
    Representation/Elements/IElement.cpp
    Representation/Mappings/IMapping.cpp
    Representation/PSets/IPSet.cpp
    Representation/PSets/IPSetDecorator.cpp
    Representation/PSets/IPSetPrivate.cpp
    Representation/Constraints/LinearConstraintsData.cpp
    Representation/Constraints/NonLinearConstraintsData.cpp
    Representation/PSets/PSetBase.cpp
    Operators/Transformations/ITransformation.cpp
    Operators/Filtrations/PSAClustering.cpp
    Operators/Directions/SBXCrossOver.cpp
    Operators/Filtrations/RandFiltrationForDirection.cpp
    Operators/Filtrations/RandFiltrationForModification.cpp
    Representation/Mappings/IMappingPrivate.cpp
    Representation/Properties/ElementProperties.cpp
    Representation/Properties/ElementPropertiesFactory.cpp
    Representation/Properties/ProblemProperties.cpp
    Representation/Properties/ProblemPropertiesFactory.cpp
    Operators/Formulations/ProblemGenerator/ProblemGenerator.cpp
    Operators/Fitness/NonDominanceRanking.cpp
    Operators/Fitness/PSACrowding.cpp
    Representation/Sets/ISet.cpp
    Representation/Properties/ElementPropertiesData.cpp
    Representation/Properties/ProblemPropertiesData.cpp
    Utils/TigonUtils.cpp
    Engine/TigonEngine.cpp
    Engine/OptimizationLinearFlow.cpp
    Utils/AbstractInterpolator.cpp
    Utils/LinearInterpolator.cpp
    Utils/SplineInterpolator.cpp
    Utils/ZeroOrderInterpolator.cpp
    Utils/RBFInterpolator.cpp
    Utils/RBFMultiQuadric.cpp
    Utils/RBFThinPlate.cpp
    Utils/RBFGauss.cpp
    Utils/RBFInverseMultiQuadric.cpp
    Utils/RBFBasis.cpp
    Utils/RBFInterpolatorCascade.cpp
    Utils/KrigingVariogram.cpp
    Utils/Kriging.cpp
    Utils/PowerVariogram.cpp
    Utils/KrigingCascade.cpp
    Utils/SphericalVariogram.cpp
    Representation/Distributions/IDistribution.cpp
    Representation/Distributions/UniformDistribution.cpp
    Representation/Distributions/LinearDistribution.cpp
    Representation/Distributions/MergedDistribution.cpp
    Representation/Distributions/NonParaDistribution.cpp
    Representation/Distributions/PeakDistribution.cpp
    Representation/Functions/ExampleFunction.cpp
    Representation/Functions/CODeM/UncertaintyKernel.cpp
    Representation/Functions/CODeM/CODeMOperators.cpp
    Representation/Functions/CODeM/CODeMDistribution.cpp
    Representation/Functions/CODeM/CODeMProblems.cpp
    Representation/Functions/WFG/wfg_toolkit/ExampleProblems.cpp
    Representation/Functions/WFG/wfg_toolkit/ExampleShapes.cpp
    Representation/Functions/WFG/wfg_toolkit/ExampleTransitions.cpp
    Representation/Functions/WFG/wfg_toolkit/FrameworkFunctions.cpp
    Representation/Functions/WFG/wfg_toolkit/Misc.cpp
    Representation/Functions/WFG/wfg_toolkit/ShapeFunctions.cpp
    Representation/Functions/WFG/wfg_toolkit/TransFunctions.cpp
    Representation/Functions/IFunction.cpp
    Representation/Functions/CTP/CTPProblems.cpp
    Representation/Functions/CTP/CTP1.cpp
    Representation/Functions/CTP/CTP2.cpp
    Representation/Functions/CTP/CTP3.cpp
    Representation/Functions/CTP/CTP4.cpp
    Representation/Functions/CTP/CTP5.cpp
    Representation/Functions/CTP/CTP6.cpp
    Representation/Functions/CTP/CTP7.cpp
    Representation/Functions/DTLZ/DTLZProblems.cpp
    Representation/Functions/DTLZ/DTLZ1.cpp
    Representation/Functions/DTLZ/DTLZ2.cpp
    Representation/Functions/CODeM/CODeM1.cpp
    Representation/Functions/CODeM/CODeM2.cpp
    Representation/Functions/CODeM/CODeM3.cpp
    Representation/Functions/CODeM/CODeM4.cpp
    Representation/Functions/CODeM/CODeM5.cpp
    Representation/Functions/CODeM/CODeM6.cpp
    Representation/Functions/KrigingSurrogate.cpp
    Representation/Functions/SingleObjective/Alpine2.cpp
    Representation/Functions/ExpectedImprovement.cpp
    Representation/Functions/RandExpectedImprovement.cpp
    Representation/Functions/FeedforwardSurrogate.cpp
    Representation/Functions/FannNetwork.cpp
    Representation/Functions/Interwoven/InterwovenSystemOne.cpp
    Representation/Functions/Interwoven/InterwovenSystemTwo.cpp
    Representation/Functions/Interwoven/InterwovenSystemFunctions.cpp
    Representation/Functions/Interwoven/InterwovenSystemOneKriging.cpp
    Representation/Functions/Interwoven/InterwovenSystemTwoKriging.cpp
    Representation/Functions/Interwoven/AirportHospitalLocationFunctions.cpp
    Representation/Functions/Interwoven/AirportLocation.cpp
    Representation/Functions/Interwoven/HospitalLocation.cpp
    Representation/Functions/Interwoven/AbstractProblemFunctions.cpp
    Representation/Functions/Interwoven/SpolynomialNodeOne.cpp
    Representation/Functions/Interwoven/SpolynomialNodeTwo.cpp
    Utils/ScalarisingFunctions.cpp
    Utils/ProjectionUtils.cpp
    Utils/NormalisationUtils.cpp
    Utils/SimplexLattice.cpp
    Representation/Distributions/SampledDistribution.cpp
    Representation/Distributions/NormalDistribution.cpp
    Operators/Filtrations/PSAEliteSelection.cpp
    Operators/Filtrations/TournamentFiltrationForModification.cpp
    Utils/BoxConstraintViolationCorrections.cpp
    Operators/Perturbations/PolynomialMutation.cpp
    Operators/Filtrations/RandFiltrationForPerturbation.cpp
    Operators/Filtrations/FreezeOperatorOutput.cpp
    Operators/Filtrations/MergeForNextIteration.cpp
    Algorithms/NSGAIIPSA.cpp
    Operators/Directions/SinglePointCrossOver.cpp
    Operators/Directions/SimplexLatticeDirectionIterator.cpp
    Operators/Fitness/GeneralizedDecomposition.cpp
    Operators/Filtrations/NeighbourhoodFiltration.cpp
    Operators/Fitness/RobustnessAssignment.cpp
    Operators/Filtrations/FitnessEliteSelection.cpp
    Operators/Evaluators/Evaluator.cpp
    Operators/Formulations/IFormulation.cpp
    Representation/Problems/Problem.cpp
    Representation/Properties/FunctionPropertiesData.cpp
    Representation/Properties/FunctionProperties.cpp
    Representation/Properties/FunctionPropertiesFactory.cpp
    Operators/AlgorithmSpecific/Sparego/SparegoInit.cpp
    Representation/Indicators/IRobustnessIndicator.cpp
    Representation/Indicators/ConfidenceIndicator.cpp
    Representation/Indicators/ThresholdIndicator.cpp
    Operators/Composites/IComposite.cpp
    Operators/Composites/SurrogateBasedOptimizer.cpp
    Operators/Transformations/Normalisation.cpp
    Operators/Initialisation/FitnessBasedInit.cpp
    Operators/Filtrations/MultiMemberTournamentForDirection.cpp
    Operators/Filtrations/MultiMemberTournamentForPerturbation.cpp
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseDiversity.cpp
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseFiltrationForDirection.cpp
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseFiltrationForPerturbation.cpp
    Operators/Transformations/Denormalisation.cpp
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseMutation.cpp
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseEliteFiltration.cpp
    Algorithms/ACROMUSE.cpp
    Operators/Initialisation/UserDefinedInit.cpp
    Algorithms/sParEGO.cpp
    Representation/Distributions/ChiSquaredDistribution.cpp
    Operators/Evaluators/Validation.cpp
    Operators/Convergence/IConvergence.cpp
    Utils/Hypervolume/hv.c
    Operators/EmptyOperator.cpp
    Operators/Convergence/RandomHypervolume.cpp
    Utils/KernelDensityEstimation.cpp
    Algorithms/NSGAII.cpp
    Operators/Fitness/NSGAIICrowding.cpp
    Operators/Filtrations/NSGAIIEliteSelection.cpp
    Operators/Filtrations/FiltrationForDirection.cpp
    Algorithms/MOEAD.cpp
    Operators/Initialisation/WeightVectorInit.cpp
    Operators/Filtrations/RandSetReplacement.cpp
    Operators/Fitness/UncertainConfidenceRobustness.cpp
    Operators/Fitness/UncertainMonteCarloRobustness.cpp
    Random/RandomGenerator.cpp
    Engine/TigonOperatorFactory.cpp
    Utils/DominanceUtils.cpp
    Operators/Perturbations/BoundedPerturbation.cpp
    Operators/Fitness/Scalarization.cpp
    Representation/Elements/IElementOperations.cpp
    Representation/Mappings/IMappingOperations.cpp
    Utils/IElementUtils.cpp
    Operators/AlgorithmSpecific/MOEADNeighbourhoodUpdate.cpp
    Engine/TigonFunctionFactory.cpp
    Operators/Filtrations/TruncateSets.cpp
    Operators/Filtrations/TournamentFiltrationForDirection.cpp
    Representation/Mappings/UncertaintyMapping.cpp
    Factories/RobustnessIndicatorFactory.cpp
    Factories/DistributionFactory.cpp
    Operators/AlgorithmSpecific/Sparego/SparegoValidation.cpp
    Operators/Fitness/ConstraintPenalty.cpp
    Operators/AlgorithmSpecific/Sparego/DirectionFitnessFiltration.cpp
    ExceptionHandling/TException.cpp
    Operators/Perturbations/CategoricalPerturpation.cpp
    Log/LogEntry.cpp
    Log/EvaluationEntry.cpp
    Log/LogManager.cpp
    Log/PopulationEntry.cpp
    Utils/JsonUtils.cpp
    Utils/HypervolumeUtils.cpp
    Operators/Convergence/Hypervolume.cpp
    Engine/InterwovenSystemHandler.cpp
    Algorithms/ParEGO.cpp
    Operators/Composites/SurrogateBasedOptimizerWithPerturbation.cpp
    Operators/Fitness/NonDominanceRankingConstraintHandling.cpp
    Operators/Evaluators/MatlabEvaluator.cpp
    Utils/BatchSolveRegister.cpp
    Utils/ScalarisingSpaceUtils.cpp
    Utils/TigonIOUtils.cpp
    Operators/Convergence/ScalarisingSpace.cpp
    Operators/Convergence/RobustScalarisingSpace.cpp )

set (HEADERS
    Core/TSharedPointer.h
    Core/TVector.h
    Core/TString.h
    Core/TMap.h
    Core/TObject.h
    Algorithms/IAlgorithm.h
    Operators/Archives/IArchive.h
    Operators/Constraints/BaseBoxConstraint.h
    Operators/Constraints/IBoxConstraints.h
    Operators/Constraints/ILinearEqConstraints.h
    Operators/Constraints/ILinearIneqConstraints.h
    Operators/Constraints/INonLinearEqConstraints.h
    Operators/Constraints/INonLinearIneqConstraints.h
    Operators/Directions/IDirection.h
    Operators/Evaluators/IEvaluator.h
    Operators/Filtrations/IFiltration.h
    Operators/Fitness/IFitness.h
    Operators/Initialisation/IInitialisation.h
    Operators/Initialisation/LHSInit.h
    Operators/Initialisation/RandomInit.h
    Operators/Perturbations/IPerturbation.h
    Operators/Random/RGenerator.h
    Operators/IOperator.h
    Representation/Constraints/BoxConstraintsData.h
    Representation/Elements/IElement.h
    Representation/Mappings/IMapping.h
    Representation/PSets/IPSet.h
    Representation/PSets/IPSetDecorator.h
    Representation/PSets/IPSetPrivate.h
    Representation/Constraints/LinearConstraintsData.h
    Representation/Constraints/NonLinearConstraintsData.h
    Representation/PSets/PSetBase.h
    Tigon.h
    tigon_global.h
    tigonconstants.h
    Operators/Transformations/ITransformation.h
    Operators/Filtrations/PSAClustering.h
    Operators/Directions/SBXCrossOver.h
    Operators/Filtrations/RandFiltrationForDirection.h
    Operators/Filtrations/RandFiltrationForModification.h
    Representation/Mappings/IMappingPrivate.h
    Representation/Properties/ElementProperties.h
    Representation/Properties/ProblemProperties.h
    Representation/Properties/ProblemPropertiesFactory.h
    Representation/Properties/ElementPropertiesFactory.h
    Operators/Formulations/ProblemGenerator/ProblemGenerator.h
    Operators/Fitness/NonDominanceRanking.h
    Operators/Fitness/PSACrowding.h
    Representation/Sets/ISet.h
    Representation/Properties/ElementPropertiesData.h
    Representation/Properties/ProblemPropertiesData.h
    Utils/TigonUtils.h
    Engine/TigonEngine.h
    Engine/OptimizationLinearFlow.h
    Utils/AbstractInterpolator.h
    Utils/LinearInterpolator.h
    Utils/SplineInterpolator.h
    Utils/ZeroOrderInterpolator.h
    Utils/RBFInterpolator.h
    Utils/RBFMultiQuadric.h
    Utils/RBFThinPlate.h
    Utils/RBFGauss.h
    Utils/RBFInverseMultiQuadric.h
    Utils/RBFBasis.h
    Utils/RBFInterpolatorCascade.h
    Utils/KrigingVariogram.h
    Utils/Kriging.h
    Utils/PowerVariogram.h
    Utils/KrigingCascade.h
    Utils/SphericalVariogram.h
    Representation/Distributions/IDistribution.h
    Representation/Distributions/UniformDistribution.h
    Representation/Distributions/LinearDistribution.h
    Representation/Distributions/MergedDistribution.h
    Representation/Distributions/NonParaDistribution.h
    Representation/Distributions/PeakDistribution.h
    Utils/ScalarisingFunctions.h
    Utils/ProjectionUtils.h
    Utils/NormalisationUtils.h
    Utils/SimplexLattice.h
    Representation/Distributions/SampledDistribution.h
    Representation/Distributions/NormalDistribution.h
    Operators/Filtrations/PSAEliteSelection.h
    Operators/Filtrations/TournamentFiltrationForModification.h
    Utils/BoxConstraintViolationCorrections.h
    Operators/Perturbations/PolynomialMutation.h
    Operators/Filtrations/RandFiltrationForPerturbation.h
    Operators/Filtrations/FreezeOperatorOutput.h
    Operators/Filtrations/MergeForNextIteration.h
    Algorithms/NSGAIIPSA.h
    Operators/Directions/SinglePointCrossOver.h
    Operators/Directions/SimplexLatticeDirectionIterator.h
    Operators/Fitness/GeneralizedDecomposition.h
    Operators/Filtrations/NeighbourhoodFiltration.h
    Operators/Fitness/RobustnessAssignment.h
    Operators/Filtrations/FitnessEliteSelection.h
    Operators/Evaluators/Evaluator.h
    Representation/Functions/IFunction.h
    Representation/Functions/CODeM/UncertaintyKernel.h
    Representation/Functions/CODeM/CODeMOperators.h
    Representation/Functions/CODeM/CODeMDistribution.h
    Representation/Functions/CODeM/CODeMProblems.h
    Representation/Functions/WFG/wfg_toolkit/ExampleProblems.h
    Representation/Functions/WFG/wfg_toolkit/ExampleShapes.h
    Representation/Functions/WFG/wfg_toolkit/ExampleTransitions.h
    Representation/Functions/WFG/wfg_toolkit/FrameworkFunctions.h
    Representation/Functions/WFG/wfg_toolkit/Misc.h
    Representation/Functions/WFG/wfg_toolkit/ShapeFunctions.h
    Representation/Functions/WFG/wfg_toolkit/TransFunctions.h
    Representation/Functions/CTP/CTPProblems.h
    Representation/Functions/CTP/CTP1.h
    Representation/Functions/CTP/CTP2.h
    Representation/Functions/CTP/CTP3.h
    Representation/Functions/CTP/CTP4.h
    Representation/Functions/CTP/CTP5.h
    Representation/Functions/CTP/CTP6.h
    Representation/Functions/CTP/CTP7.h
    Representation/Functions/DTLZ/DTLZProblems.h
    Representation/Functions/DTLZ/DTLZ1.h
    Representation/Functions/DTLZ/DTLZ2.h
    Representation/Functions/ExampleFunction.h
    Representation/Functions/CODeM/CODeM1.h
    Representation/Functions/CODeM/CODeM2.h
    Representation/Functions/CODeM/CODeM3.h
    Representation/Functions/CODeM/CODeM4.h
    Representation/Functions/CODeM/CODeM5.h
    Representation/Functions/CODeM/CODeM6.h
    Representation/Functions/KrigingSurrogate.h
    Representation/Functions/SingleObjective/Alpine2.h
    Representation/Functions/ExpectedImprovement.h
    Representation/Functions/FeedforwardSurrogate.h
    Representation/Functions/FannNetwork.h
    Representation/Functions/RandExpectedImprovement.h
    Representation/Functions/Interwoven/InterwovenSystemOne.h
    Representation/Functions/Interwoven/InterwovenSystemTwo.h
    Representation/Functions/Interwoven/InterwovenSystemFunctions.h
    Representation/Functions/Interwoven/InterwovenSystemOneKriging.h
    Representation/Functions/Interwoven/InterwovenSystemTwoKriging.h
    Representation/Functions/Interwoven/AirportHospitalLocationFunctions.h
    Representation/Functions/Interwoven/AirportLocation.h
    Representation/Functions/Interwoven/HospitalLocation.h
    Representation/Functions/Interwoven/AbstractProblemFunctions.h
    Representation/Functions/Interwoven/SpolynomialNodeOne.h
    Representation/Functions/Interwoven/SpolynomialNodeTwo.h
    Operators/Formulations/IFormulation.h
    Representation/Problems/Problem.h
    Representation/Properties/FunctionPropertiesData.h
    Representation/Properties/FunctionProperties.h
    Representation/Properties/FunctionPropertiesFactory.h
    Operators/AlgorithmSpecific/Sparego/SparegoInit.h
    Representation/Indicators/IRobustnessIndicator.h
    Representation/Indicators/ConfidenceIndicator.h
    Representation/Indicators/ThresholdIndicator.h
    Operators/Composites/IComposite.h
    Operators/Composites/SurrogateBasedOptimizer.h
    Operators/Transformations/Normalisation.h
    Operators/Initialisation/FitnessBasedInit.h
    Operators/Filtrations/MultiMemberTournamentForDirection.h
    Operators/Filtrations/MultiMemberTournamentForPerturbation.h
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseDiversity.h
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseFiltrationForDirection.h
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseFiltrationForPerturbation.h
    Operators/Transformations/Denormalisation.h
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseMutation.h
    Operators/AlgorithmSpecific/ACROMUSE/AcromuseEliteFiltration.h
    Algorithms/ACROMUSE.h
    Operators/Initialisation/UserDefinedInit.h
    Algorithms/sParEGO.h
    Representation/Distributions/ChiSquaredDistribution.h
    Operators/Evaluators/Validation.h
    Operators/Convergence/IConvergence.h
    Utils/Hypervolume/hv.h
    Algorithms/NSGAII.h
    Operators/Fitness/NSGAIICrowding.h
    Operators/Filtrations/NSGAIIEliteSelection.h
    Operators/Filtrations/FiltrationForDirection.h
    Operators/EmptyOperator.h
    Operators/Convergence/RandomHypervolume.h
    Utils/KernelDensityEstimation.h
    Operators/Fitness/UncertainConfidenceRobustness.h
    Operators/Fitness/UncertainMonteCarloRobustness.h
    Random/RandomGenerator.h
    Engine/TigonOperatorFactory.h
    Engine/IPSetFactory.h
    tigonengineregistry.h
    Algorithms/MOEAD.h
    Operators/Initialisation/WeightVectorInit.h
    Operators/Filtrations/RandSetReplacement.h
    Utils/DominanceUtils.h
    Operators/Perturbations/BoundedPerturbation.h
    Operators/Fitness/Scalarization.h
    Representation/Elements/IElementOperations.h
    Representation/Mappings/IMappingOperations.h
    Representation/Mappings/UncertaintyMapping.h
    Utils/IElementUtils.h
    Operators/AlgorithmSpecific/MOEADNeighbourhoodUpdate.h
    Operators/Filtrations/TruncateSets.h
    Operators/Filtrations/TournamentFiltrationForDirection.h
    Factories/RobustnessIndicatorFactory.h
    Engine/IFunctionFactory.h
    Engine/TigonFunctionFactory.h
    Engine/TigonEngineConstants.h
    Factories/DistributionFactory.h
    Operators/AlgorithmSpecific/Sparego/SparegoValidation.h
    Operators/Fitness/ConstraintPenalty.h
    Operators/AlgorithmSpecific/Sparego/DirectionFitnessFiltration.h
    ExceptionHandling/TException.h
    Operators/Perturbations/CategoricalPerturpation.h
    Log/LogEntry.h
    Log/EvaluationEntry.h
    Log/LogManager.h
    Log/PopulationEntry.h
    Utils/JsonUtils.h
    Utils/HypervolumeUtils.h
    Operators/Convergence/Hypervolume.h
    Engine/InterwovenSystemHandler.h
    Algorithms/ParEGO.h
    Operators/Composites/SurrogateBasedOptimizerWithPerturbation.h
    Operators/Fitness/NonDominanceRankingConstraintHandling.h
    Operators/Evaluators/MatlabEvaluator.h
    Utils/BatchSolveRegister.h
    Utils/ScalarisingSpaceUtils.h
    Operators/Convergence/ScalarisingSpace.h
    Operators/Convergence/RobustScalarisingSpace.h
    Utils/TigonIOUtils.h )

add_library(Tigon SHARED ${HEADERS} ${SOURCES})

# libraries
target_link_libraries(Tigon ${CMAKE_THREAD_LIBS_INIT})
link_directories(${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
target_link_libraries (Tigon Json)
target_link_libraries (Tigon Botan)
target_link_libraries (Tigon Fann)
target_link_libraries (Tigon TinyXml2)

# Boost
INCLUDE_DIRECTORIES($ENV{BOOST_INCLUDE})
link_directories($ENV{BOOST_LIB})

if(APPLE)
    target_link_libraries (Tigon boost_filesystem-mt boost_system-mt)
else()
    target_link_libraries (Tigon boost_filesystem boost_system)
endif()

